--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react/style-prop-object": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "@typescript-eslint/no-explicit-any": "off",
+    "no-shadow": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
