--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "react/require-default-props": "off",
     "react/style-prop-object": "off",
+    "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "@typescript-eslint/no-explicit-any": "off",
     "no-shadow": "off",
