--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "react/require-default-props": "off",
     "react/style-prop-object": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/function-component-definition": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "@typescript-eslint/no-explicit-any": "off",
     "no-shadow": "off",
