--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-popover-view": "^5.0.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.1.1",
     "react-native-toast-notifications": "^3.2.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
@@ -51,6 +52,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.6.2",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "resolutions": {
